# open-subtitle

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  continue-plan.md  flake.nix  future-features.md  release-plz.toml
.github/: SMOKE_ACTIONS
.github/workflows/: ci.yml  manual-version-bump.yml  release.yml
crates/os-cli/: Cargo.toml
crates/os-cli/src/: compose.rs  main.rs
crates/os-compose/: Cargo.toml
crates/os-compose/src/: lib.rs
crates/os-config/: Cargo.toml
crates/os-config/src/: lib.rs
crates/os-core/: Cargo.toml
crates/os-core/src/: cue.rs  error.rs  guess.rs  lang.rs  lib.rs  model.rs  ports.rs  score.rs
crates/os-daemon/: Cargo.toml
crates/os-daemon/src/: main.rs  osc.rs  scan.rs  wanted.rs  webhook.rs
crates/os-engine/: Cargo.toml
crates/os-engine/src/: lib.rs  library.rs  throttle.rs
crates/os-ffi/: Cargo.toml
crates/os-ffi/include/: opensubtitle.h
crates/os-ffi/src/: lib.rs
crates/os-identify/: Cargo.toml
crates/os-identify/src/: filename.rs  hash.rs  lib.rs  refine.rs
crates/os-mpv/: README.md  open-subtitle.lua
crates/os-process/: Cargo.toml
crates/os-process/src/: archive.rs  encoding.rs  format.rs  lib.rs
crates/os-providers/: Cargo.toml
crates/os-providers/src/: http.rs  jimaku.rs  lib.rs  opensubtitles_com.rs  opensubtitles_org.rs  subdl.rs
crates/os-sync/: Cargo.toml
crates/os-sync/src/: lib.rs
crates/os-transcribe/: Cargo.toml
crates/os-transcribe/src/: lib.rs
crates/os-translate/: Cargo.toml
crates/os-translate/src/: lib.rs
docs/: ARCHITECTURE.md  PLAN.md  PROTOCOL.md  RESEARCH.md  ROADMAP.md  STRATEGY.md
docs/schemas/: README.md  error.schema.json  language.schema.json  media.schema.json  subtitle-candidate.schema.json  subtitle-file.schema.json
scripts/: publish-crates.sh
