[workspace]
resolver = "2"
members = [
    "crates/os-core",
    "crates/os-config",
    "crates/os-identify",
    "crates/os-providers",
    "crates/os-process",
    "crates/os-sync",
    "crates/os-translate",
    "crates/os-transcribe",
    "crates/os-engine",
    "crates/os-compose",
    "crates/os-daemon",
    "crates/os-ffi",
    "crates/os-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Grok Insider <admin@grokinsider.net>"]
repository = "https://github.com/grok-insider/open-subtitle"
rust-version = "1.80"

[workspace.dependencies]
os-core = { path = "crates/os-core", version = "0.2.0" }
os-config = { path = "crates/os-config", version = "0.2.0" }
os-identify = { path = "crates/os-identify", version = "0.2.0" }
os-providers = { path = "crates/os-providers", version = "0.2.0" }
os-process = { path = "crates/os-process", version = "0.2.0" }
os-engine = { path = "crates/os-engine", version = "0.2.0" }
os-sync = { path = "crates/os-sync", version = "0.2.0" }
os-translate = { path = "crates/os-translate", version = "0.2.0" }
os-transcribe = { path = "crates/os-transcribe", version = "0.2.0" }
os-compose = { path = "crates/os-compose", version = "0.2.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process"] }
futures = "0.3"
toml = "0.8"
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
encoding_rs = "0.8"
chardetng = "0.1"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
urlencoding = "2"
tiny_http = "0.12"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
strip = true
