[workspace]
resolver = "2"
members = [
    "crates/os-core",
    "crates/os-config",
    "crates/os-identify",
    "crates/os-providers",
    "crates/os-process",
    "crates/os-sync",
    "crates/os-translate",
    "crates/os-transcribe",
    "crates/os-engine",
    "crates/os-compose",
    "crates/os-daemon",
    "crates/os-ffi",
    "crates/os-cli",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Grok Insider <admin@grokinsider.net>"]
repository = "https://github.com/grok-insider/open-subtitle"
rust-version = "1.80"

[workspace.dependencies]
# The library crates are published to crates.io under `open-subtitle-*` (the
# generic `os-*` names are taken by unrelated crates). The dep KEY stays `os-*`
# and each crate's `[lib] name` stays `os_*`, so every `use os_core::…` and
# `{ workspace = true }` reference is unchanged — only the published package name
# (what cargo/release-plz resolve from the registry) differs.
os-core = { package = "open-subtitle-core", path = "crates/os-core", version = "0.2.1" }
os-config = { package = "open-subtitle-config", path = "crates/os-config", version = "0.2.1" }
os-identify = { package = "open-subtitle-identify", path = "crates/os-identify", version = "0.2.1" }
os-providers = { package = "open-subtitle-providers", path = "crates/os-providers", version = "0.2.1" }
os-process = { package = "open-subtitle-process", path = "crates/os-process", version = "0.2.1" }
os-engine = { package = "open-subtitle-engine", path = "crates/os-engine", version = "0.2.1" }
os-sync = { package = "open-subtitle-sync", path = "crates/os-sync", version = "0.2.1" }
os-translate = { package = "open-subtitle-translate", path = "crates/os-translate", version = "0.2.1" }
os-transcribe = { package = "open-subtitle-transcribe", path = "crates/os-transcribe", version = "0.2.1" }
os-compose = { package = "open-subtitle-compose", path = "crates/os-compose", version = "0.2.1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process"] }
futures = "0.3"
toml = "0.8"
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
encoding_rs = "0.8"
chardetng = "0.1"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
urlencoding = "2"
tiny_http = "0.12"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
strip = true
