[package]
name = "os-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle CLI (`ost`): identify, search, download — keyless by default"

[[bin]]
name = "ost"
path = "src/main.rs"

[dependencies]
os-core = { workspace = true }
os-config = { workspace = true }
os-identify = { workspace = true }
os-providers = { workspace = true }
os-process = { workspace = true }
os-engine = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
