[package]
name = "os-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle configuration: schema, load/save, XDG paths, secrets policy"

[dependencies]
os-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }

[lints]
workspace = true
