[package]
name = "open-subtitle-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle configuration: schema, load/save, XDG paths, secrets policy"
readme = "../../README.md"

# Package name `open-subtitle-config`; imported as `os_config`. Not published to crates.io.
[lib]
name = "os_config"

[dependencies]
os-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }

[lints]
workspace = true
