[package]
name = "open-subtitle-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle core: domain model, ports, and pure scoring/matching (no I/O)"
readme = "../../README.md"

# Package name is `open-subtitle-core` (generic `os-core` is taken on crates.io).
# Never published; consumers take it via git. Lib import stays `os_core`.
[lib]
name = "os_core"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
