[package]
name = "os-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle HTTP/JSON daemon (`ostd`) — any app can drive the engine"

[[bin]]
name = "ostd"
path = "src/main.rs"

[dependencies]
os-core = { workspace = true }
os-config = { workspace = true }
os-compose = { workspace = true }
os-engine = { workspace = true }
tokio = { workspace = true }
tiny_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
