[package]
name = "open-subtitle-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle engine: use-cases, the Engine composition, and the throttler"
readme = "../../README.md"

# Package name `open-subtitle-engine`; imported as `os_engine`. Not published to crates.io.
[lib]
name = "os_engine"

[dependencies]
os-core = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
