[package]
name = "os-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle C-ABI library (libopensubtitle) — embed the engine in native apps"

[lib]
name = "opensubtitle"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
os-core = { workspace = true }
os-config = { workspace = true }
os-compose = { workspace = true }
os-engine = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
