[package]
name = "open-subtitle-identify"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle identification: filename parsing, hashing (OSDB), refiners"
readme = "../../README.md"

# Package name `open-subtitle-identify`; imported as `os_identify`. Not published to crates.io.
[lib]
name = "os_identify"

[dependencies]
os-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
