[package]
name = "open-subtitle-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle provider adapters (OpenSubtitles.org/.com, SubDL, …)"
readme = "../../README.md"

# Published as `open-subtitle-providers`; imported as `os_providers`.
[lib]
name = "os_providers"

[dependencies]
os-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
urlencoding = { workspace = true }

[lints]
workspace = true
