[package]
name = "open-subtitle-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle sync adapters (ffsubsync, alass)"

# Published as `open-subtitle-sync`; imported as `os_sync`.
[lib]
name = "os_sync"

[dependencies]
os-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
