[package]
name = "open-subtitle-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle sync adapters (ffsubsync, alass)"
readme = "../../README.md"

# Package name `open-subtitle-sync`; imported as `os_sync`. Not published to crates.io.
[lib]
name = "os_sync"

[dependencies]
os-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
