[package]
name = "open-subtitle-transcribe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle speech-to-text fallback (Whisper)"

# Published as `open-subtitle-transcribe`; imported as `os_transcribe`.
[lib]
name = "os_transcribe"

[dependencies]
os-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
