[package]
name = "open-subtitle-translate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-subtitle translation adapters (LibreTranslate / local, LLM optional)"

# Published as `open-subtitle-translate`; imported as `os_translate`.
[lib]
name = "os_translate"

[dependencies]
os-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
